2004-10-30  Frank Warmerdam  <warmerdam@pobox.com>

	* Improved --with-jni support in configure to allow specification
	of an include directory.  

Rel. 4.4.9 2004-10-29
-------------------------------------------------------------------------
	
2004-10-29  Frank Warmerdam  <warmerdam@pobox.com>

	* Preparing 4.4.9 release.

	* src/pj_gridinfo.c: Fixed reported information in ctable debug msg.

	* src/nad_cvt.c: Fixed problem with domai of tb.lam that caused
	failure of eastern hemisphere locations to transform with null
	grid (which is world sized).

2004-10-28  Frank Warmerdam  <warmerdam@pobox.com>

	* src/makefile.vc: Changed to build executables against a proj.dll
	by default.  

	* proj.def: added lots of methods, including some private ones used
	only by proj.c, and geod.c.

	* Added pj_get_*_ref() accessors for all the definition lists. 

	* Makefile.am: added jniwrap make support.

	* configure.in: various updates, including use of AC_MAINTAINER_MODE,
	and setting version to 4.4.9.  Fixes annoying .so problem. 

	* updated to latest libtoolish stuff. 

2004-10-25  Frank Warmerdam  <warmerdam@pobox.com>

	* fixtimes.sh: Run this after a CVS checkout to setup times of
	various build files to avoid re-running automake and friends.

	* src/geocent.c,geocent.h,pj_transform.c: Added pj_ prefix to 
	all Geotrans functions to avoid name conflict if both linked in.

	* configure.in: added --with-jni option.

	* Added src/jniproj.c, src/org_proj4_Projections.h.

	* Added jniwrap subtree (actually Andrea Antonello).

2004-10-21  Frank Warmerdam  <warmerdam@pobox.com>

	* src/makefile.vc: added support for new files.

2004-10-19  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_gauss.c, src/PJ_geos.c, src/PJ_sterea.c: Incorporated 
	geos and sterea projections from Gerald's libproj4.

2004-09-16  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_open_lib.c: added pj_set_searchpath() provided by Eric Miller.

2004-09-14  Frank Warmerdam  <warmerdam@pobox.com>
